improve alert messages